clusters/onprem-dev/monitoring/prometheus/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: public-gateway
    namespace: gateway
  hostnames:
  - grafana.yongun.shop
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: prometheus-grafana
      namespace: monitoring
      port: 80
      weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
